--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,14 @@
 <h1> Articles</h1>
+  <%= form_tag articles_path, :method => 'get', class: 'form-inline' do %>
+    <div class="form-group">
+      <%= text_field_tag :search, params[:search], class: 'form-control' %>
+      <%= submit_tag "Search", :name => nil, class: 'btn btn-primary' %>
+    </div>
+  <% end %>
 
+
+
+<%= will_paginate  @articles, renderer: BootstrapPagination::Rails  %>
 <% @articles.each do |article| %>
   <div class="panel panel-default">
     <div class="panel-heading">
