--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 <h1> Articles</h1>
   <%= form_tag articles_path, :method => 'get', class: 'form-inline' do %>
+    <%= hidden_field_tag :sort, params[:sort] %>
     <div class="form-group">
       <%= text_field_tag :search, params[:search], class: 'form-control' %>
       <%= submit_tag "Search", :name => nil, class: 'btn btn-primary' %>
@@ -7,8 +8,13 @@
   <% end %>
 
 
-
-<%= will_paginate  @articles, renderer: BootstrapPagination::Rails  %>
+  <div class="btn-group" role="group" style="margin-top:20px;">
+    <%= link_to "Title", params.merge(:sort => "title", :page => nil), :class => "btn btn-default" %>
+    <%= link_to "Creation date", params.merge(:sort => "created_at", :page => nil), :class => "btn btn-default" %>
+  </div>
+  <div>
+    <%= will_paginate  @articles, renderer: BootstrapPagination::Rails  %>
+  </div>
 <% @articles.each do |article| %>
   <div class="panel panel-default">
     <div class="panel-heading">
